editor scrollbar repairs

--- a/src/editor/editor.css
+++ b/src/editor/editor.css
@@ -117,6 +117,7 @@ input.toggle:checked + label.toggle.light {
 }
 .RootUi > .workbench {
   flex: 1;
+  max-height: 100vh;
 }
 .RootUi > .workbench > * {
   width: 100%;
@@ -125,6 +126,7 @@ input.toggle:checked + label.toggle.light {
 
 .SidebarUi {
   min-width: 200px;
+  max-height: 100vh;
   border-right: 1px solid #000;
   display: flex;
   flex-direction: column;
